--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -5,7 +5,32 @@
     min-width: 483px;
     max-width: 483px;
     white-space: normal;
-    font-size: 48px;
+    font-size: 200%;
+    line-height: 53px;
+    font-weight: 400;
+    color: rgb(255, 255, 255);
+    letter-spacing: 0px;
+    font-family: "PT Sans";
+    visibility: inherit;
+    transition: none 0s ease 0s;
+    text-align: inherit;
+    border-width: 0px;
+    margin: 0px;
+    padding-bottom:0rem;
+    min-height: 0px;
+    max-height: none;
+    opacity: 1;
+    transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
+    transform-origin: 50% 50% 0px;
+}
+
+.home-text3 {
+
+    z-index: 9;
+    min-width: 483px;
+    max-width: 483px;
+    white-space: normal;
+    font-size: 500%;
     line-height: 53px;
     font-weight: 400;
     color: rgb(255, 255, 255);
@@ -30,18 +55,18 @@
     min-width: 482px;
     max-width: 482px;
     white-space: normal;
-    font-size: 18px;
-    line-height: 21px;
+    font-size: 200%;
+    line-height: 1em;
     font-weight: 400;
     color: rgb(255, 255, 255);
     letter-spacing: 0px;
-    font-family: "PT Serif";
+    font-family: "PT Sans";
     visibility: inherit;
     transition: none 0s ease 0s;
     text-align: inherit;
     border-width: 0px;
-    margin: 0px;
-    padding: 0px;
+    margin-bottom: 1em;
+    padding-bottom: 0px;
     min-height: 0px;
     max-height: none;
     opacity: 1;
@@ -53,23 +78,26 @@
 .container {
     height: 100%; 
     display: grid;
-    grid-template-columns: 1fr 3fr 4fr;
+    grid-template-columns: 1fr 2fr 3fr ;
     padding-top: 10rem;
+    padding-bottom: 5vw;
 
 }
 .dot {
     display: none;
 }
-/*
+
 .main-home {
-    background: url('src/assets/images/home-right.png') right bottom no-repeat, url('src/assets/images/bg1.jpg') left top repeat;
-}*/
+    background-color: black;
+}
 
 .main-text {
-    margin-top: 15rem;
+    margin-top: 7rem;
     margin-bottom: 3rem;
     font-family: "PT Serif";
     width: 26vw;
+    text-align: center;
+    line-height: normal;
     
 }
 .img-res {
@@ -81,29 +109,16 @@
     margin-top: 2rem;
 }
 .images {
-    margin-top: 13rem;
+    margin-top: 0rem;
     max-width: none;
     transition: none 0s ease 0s;
 }
 .lady1 {
-    width: 33%;
+    width: 70%;
     position: relative;
-    z-index: 3;
+    z-index: 0;
 }
-.lady2 {
-    width: 33%;
-    position: relative;
-    z-index: 2;
-    bottom: 3rem;
-    right: 3rem;
-}
-.lady3 {
-    width: 33%;
-    position: relative;
-    z-index: 1;
-    bottom: 6rem;
-    right: 6rem;
-}
+
 .sub-page {
     background-color: #f6e6e7;
     text-align: center;
@@ -172,10 +187,7 @@
 }
 
 @media screen and (max-width: 800px) {
-    /*
-    .main-home {
-        background: url('src/assets/images/bg1.jpg') left top repeat;
-    }*/
+    
     .main-text {
         margin-top: 5rem;
         margin-bottom: 3rem;
@@ -183,7 +195,7 @@
         text-align: center;
         margin-left: 2rem;
         margin-right: 2rem;
-        grid-column: 1/9;
+        grid-column: 2/2;
         width: 90%;
         text-align: center;
         
@@ -216,9 +228,7 @@
         animation-name: fade;
         animation-duration: 1.5s;
       }
-      .images {
-        display: none;
-      }
+      
       @-webkit-keyframes fade {
         from {opacity: .4} 
         to {opacity: 1}
@@ -241,17 +251,14 @@
 
 /* to be fixed more */
 @media screen and (max-width: 1000px) {
-    .images {
-      display: none;
-    }
-    .main-text {
+  .main-text {
       margin-top: 5rem;
       margin-bottom: 3rem;
       font-family: "PT Serif";
       text-align: center;
       margin-left: 2rem;
       margin-right: 2rem;
-      grid-column: 1/9;
+      grid-column: 2/2;
       width: auto;
       text-align: center;
   }
@@ -263,7 +270,7 @@
     padding-right: 1rem;
     padding-left: 1rem;
     z-index: -10;
-    grid-column: 1/9;
+    grid-column: 1/2;
   }
   .main-home {
     background-color: black;
