--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,18 @@
 <div class="container main-home">
     <div class="left-margin"></div>
+    <div class="images">
+        <img class="lady1 mySlides fade" src="assets/images/bitmoji.png"
+          alt="bitmoji">
+    </div>
     <div class="main-text">
         <div style="color: white;">
-            <span class="home-text1">Feel brand new at every ocassion</span><br>
-            <span class="home-text2">Got a gorgeous new look for every special ocassion while saving money by renting
-              jewelry from our premiere collection</span>
+            <span class="home-text1">Hey, I'm</span><br>
+            <span class="home-text3">Manmeet</span><br>
+            <svg height="10" width="500">
+                <line x1="0" y1="0" x2="2000" y2="0" style="stroke:rgb(255,255,255);stroke-width:5" />
+            </svg>
+            <span class="home-text2">Former Software Engineer Intern @ SmartOwn</span><br>
+            <span class="home-text2">BSc Software Systems @ SFU</span>
         </div><!--
         <div class="app-link">
             <a style="margin-right: 3rem;" href="https://play.google.com/store/apps/details?id=com.smartown"><img class="img-res" src="assets/images/applestore.png"
@@ -26,10 +34,3 @@
     </div> -->
 </div>
 
-<div class="sub-page">
-    <div id="sub-page-text" style="color: black;">
-        <span style="font-size: 40px;" >New Customer Exclusive</span><br>
-        <span style="font-size: 53px;">Up To 50% On All Rentals</span>
-    </div>
-    <button class="button"> Find Your Look </button>
-</div>
