--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,9 +16,9 @@
     <i class="material-icons" style="color:white">view_headline</i>
     </div>
     <nav>
-      <a href="#"><img style="width: 14rem; float: left;" src="assets/images/profile.png" alt="ManmeetKalra-icon"></a>
       <ul>
         <li class="current"><a href="#">Home</a></li>
+        <li><a href="#work">WORK EXPERIENCE</a></li>
         <li><a href="#projects">PROJECTS</a></li>
         <li><a href="#resume">RESUME</a></li>
         <li><a href="#contact">CONTACT ME</a></li>
@@ -38,14 +38,15 @@
 
 
 <app-home id="home"></app-home>
-<!--
 
 
-<app-designs id="designs"></app-designs>
+
+<app-work id="work"></app-work>
 
 
-<app-works id="works"></app-works>
+<app-projects id="projects"></app-projects>
 
-<app-testimonials id="testimonials"></app-testimonials>
-<app-contact id="contact"></app-contact>-->
+<app-resume id="resume"></app-resume>
+
+<app-contact id="contact"></app-contact>
 
