--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,1 +1,26 @@
-<p>contact works!</p>
+<div class="contact">
+    <div class="heading">Contact Me</div>
+    <div class="heading">
+    <svg height="10" width="300">
+        <line x1="0" y1="0" x2="500" y2="0" style="stroke:rgb(255, 255, 255);stroke-width:5" />
+    </svg>
+    </div>
+    <div class="container">
+        <div class="left-margin"></div>
+        <div class="images">
+            <a style="margin-right: 3rem;" href="https://www.linkedin.com/in/manmeetskalra/">
+            <img class="lady1 fade" style="border-radius: 10%;" src="assets/images/linkedin.png"
+              alt="linkedinicon"></a>
+        </div>
+        <div class="images">
+            <a style="margin-right: 3rem;" href="https://www.instagram.com/manmeetskalra/?hl=en">
+            <img class="lady1 fade" style="border-radius: 10%;" src="assets/images/instagram.png"
+              alt="instaicon"></a>
+        </div>
+        <div class="images">
+            <a style="margin-right: 3rem;" href="https://www.facebook.com/manmeet.kalra.583/">
+            <img class="lady1 fade" src="assets/images/facebook.png"
+              alt="fbicon"></a>
+        </div>
+        <div class="left-margin"></div>
+    </div>
