--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,1 +1,45 @@
-<p>projects works!</p>
+<div class="projects">
+    <div class="heading">Projects
+        <a href="https://github.com/manmeetskalra">
+            <img class="lady1 fade" style="border-radius: 10%; width: 2.5%;" src="assets/images/github.png"
+              alt="githubicon"></a>
+    </div>
+    <div class="heading">
+    <svg height="10" width="350">
+        <line x1="0" y1="0" x2="500" y2="0" style="stroke:rgb(255, 255, 255);stroke-width:5" />
+    </svg>
+    </div>
+    <div class="container">
+        <div class="left-margin"></div>
+        <div class="images">
+            <img class="lady1 fade" src="assets/images/boston-housing.png"
+              alt="smartownicon">
+        </div>
+        <div class="main-text">
+            <div style="color: black;">
+                <span class="home-text1">I was able to develop and evaluate performance and 
+                    predictive power of supervised regressor model using Python libraries 
+                    like NumPy, Panda, Scikit-Learn, Matplotlib to help real estate agents 
+                    to predict value for houses.</span><br>
+            </div>
+        </div>
+        <div class="left-margin"></div>
+    </div>
+    <div class="container">
+        <div class="left-margin"></div>
+        <div class="main-text">
+            <div style="color: black;">
+                <span class="home-text1">I was able to develop a mathematical game in 
+                    group 3, using Html, CSS and JavaScript to give game attractive and 
+                    user-friendly experience. I was also responsible for testing all 
+                    possible input combination and implement direct buttons to solve 
+                    complex states.</span><br>
+            </div>
+        </div>
+        <div class="images">
+            <img class="lady1 fade" style= "height: 500px;"src="assets/images/Puck-puzzle.png"
+              alt="smartownicon">
+        </div>
+        <div class="left-margin"></div>
+    </div>
+</div>
