--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,13 +6,13 @@
     </div>
     <div class="main-text">
         <div style="color: white;">
-            <span class="home-text1">Hey, I'm</span><br>
-            <span class="home-text3">Manmeet</span><br>
-            <svg height="10" width="500">
+            <div class="home-text1">Hey, I'm</div>
+            <div class="home-text3" style="padding-bottom: 1rem;">Manmeet</div>
+            <svg height="10" width="400">
                 <line x1="0" y1="0" x2="2000" y2="0" style="stroke:rgb(255,255,255);stroke-width:5" />
             </svg>
-            <span class="home-text2">Former Software Engineer Intern @ SmartOwn</span><br>
-            <span class="home-text2">BSc Software Systems @ SFU</span>
+            <div class="home-text2" style="padding-top: 3rem;">Former Software Engineer Intern @ SmartOwn</div>
+            <div class="home-text2">BSc Software Systems @ SFU</div>
         </div><!--
         <div class="app-link">
             <a style="margin-right: 3rem;" href="https://play.google.com/store/apps/details?id=com.smartown"><img class="img-res" src="assets/images/applestore.png"
