--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,1 +1,16 @@
-<p>resume works!</p>
+<div class="resume">
+    <div class="heading">Resume</div>
+    <div class="heading">
+    <svg height="10" width="300">
+        <line x1="0" y1="0" x2="500" y2="0" style="stroke:rgb(0,0,0);stroke-width:5" />
+    </svg>
+    </div>
+    <div class="container">
+        <div class="left-margin"></div>
+        <div class="images">
+            <img class="lady1 fade" src="assets/images/resume.png"
+              alt="smartownicon">
+        </div>
+        <div class="left-margin"></div>
+    </div>
+</div>
