--- a/src/app/work/work.component.css
+++ b/src/app/work/work.component.css
@@ -4,7 +4,57 @@
     color: #000;
     text-transform: uppercase;
     letter-spacing: 1px;
-    font-size: 30px;
+    font-size: 350%;
     line-height: 35px;
-    margin-bottom: 2rem;
+}
+.container {
+    height: 100%; 
+    display: grid;
+    grid-template-columns:1fr 3fr 2fr 0.5fr;
+    padding-top: 10rem;
+    padding-bottom: 5vw;
+
+}
+.lady1 {
+    width: 70%;
+    position: relative;
+    z-index: 0;
+}
+.images {
+    margin-top: 0rem;
+    max-width: none;
+    transition: none 0s ease 0s;
+}
+img {
+    border-radius: 50%;
+}
+.main-text {
+    margin-bottom: 3rem;
+    font-family: "PT Serif";
+    text-align: center;
+    line-height: normal;
+    margin-right: 10rem;
+    
+}
+.home-text1 {
+
+    z-index: 9;
+    white-space: normal;
+    font-size: 150%;
+    line-height: normal;
+    font-weight: 400;
+    color: rgb(0, 0, 0);
+    letter-spacing: 0px;
+    font-family: "PT Sans";
+    visibility: inherit;
+    transition: none 0s ease 0s;
+    text-align: inherit;
+    border-width: 0px;
+    margin: 0px;
+    padding:0rem;
+    min-height: 0px;
+    max-height: none;
+    opacity: 1;
+    transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
+    transform-origin: 50% 50% 0px;
 }
