--- a/src/app/work/work.component.html
+++ b/src/app/work/work.component.html
@@ -1,3 +1,30 @@
 <div class="work-experience">
     <div class="heading">Work Experience</div>
+    <div class="heading">
+    <svg height="10" width="500">
+        <line x1="0" y1="0" x2="2000" y2="0" style="stroke:rgb(0,0,0);stroke-width:5" />
+    </svg>
+    </div>
+    <div class="container">
+        <div class="left-margin"></div>
+        <div class="main-text">
+            <div style="color: black;">
+                <span class="home-text1">As a Software Engineer Intern at SmartOwn, 
+                    I gained exposure to the Agile Software Development Lifecycle and contributing 
+                    extensively at design, development, testing and deployment stages. In addition to 
+                    maintaining and improving the health of existing production code, I developed 3 new 
+                    user-facing features that are responsive for all platforms and ensured the technical 
+                    feasibility of UI/UX designs using Sass, Bootstrap and Angular. These features bind 
+                    data to specific views and synchronize data with server using HTTP Service calls. 
+                    Along with building high-quality reusable code, I used Amazon Elastic Load Balancer to 
+                    increase capacity and reliability of application. I also gained hands on experience in 
+                    containerized application deployment in cloud using Docker technology.</span><br>
+            </div>
+        </div>
+        <div class="images">
+            <img class="lady1 fade" src="assets/images/smartownicon.jpg"
+              alt="smartownicon">
+        </div>
+        <div class="left-margin"></div>
+    </div>
 </div>
