--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -41,7 +41,7 @@
 
     z-index: 9;
     white-space: normal;
-    font-size: 150%;
+    font-size: 1.5rem;
     line-height: normal;
     font-weight: 400;
     color: rgb(255, 255, 255);
@@ -59,3 +59,27 @@
     transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
     transform-origin: 50% 50% 0px;
 }
+@media screen and (max-width: 768px) {
+    .main-home {
+      background-color: black;
+      margin-bottom: 5rem;
+  }
+    .left-margin {
+      display: none;
+    }
+    .images {
+      grid-column: 1/6;
+      text-align: center;
+      padding-top: 3rem;
+    }
+    .main-text{
+      grid-column: 1/6;
+      text-align: center;
+    }
+    .home-text1 {
+        text-align: center;
+    }
+    .container {
+        padding-top: 0;
+    }
+  }
