--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,7 +1,7 @@
 <div class="projects">
     <div class="heading">Projects
         <a href="https://github.com/manmeetskalra">
-            <img class="lady1 fade" style="border-radius: 10%; width: 2.5%;" src="assets/images/github.png"
+            <img class="lady1 fade" style="border-radius: 10%; width: 2.5rem;" src="assets/images/github.png"
               alt="githubicon"></a>
     </div>
     <div class="heading">
