--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -8,8 +8,9 @@
     <div class="container">
         <div class="left-margin"></div>
         <div class="images">
+            <a href="assets/images/resume.pdf" download>
             <img class="lady1 fade" src="assets/images/resume.png"
-              alt="smartownicon">
+              alt="smartownicon"></a>
         </div>
         <div class="left-margin"></div>
     </div>
