--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -59,3 +59,9 @@
     transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
     transform-origin: 50% 50% 0px;
 }
+
+@media screen and (max-width: 768px) {
+   .container {
+       padding-top: 4rem;
+   }
+  }
