--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,10 +7,11 @@
     <div class="main-text">
         <div style="color: white;">
             <div class="home-text1">Hey, I'm</div>
-            <div class="home-text3" style="padding-bottom: 1rem;">Manmeet</div>
+            <div class="home-text3">Manmeet</div>
+            <div class="home-text3">
             <svg height="10" width="400">
                 <line x1="0" y1="0" x2="2000" y2="0" style="stroke:rgb(255,255,255);stroke-width:5" />
-            </svg>
+            </svg></div>
             <div class="home-text2" style="padding-top: 3rem;">Former Software Engineer Intern @ SmartOwn</div>
             <div class="home-text2">BSc Software Systems @ SFU</div>
         </div><!--
