--- a/src/app/work/work.component.html
+++ b/src/app/work/work.component.html
@@ -9,13 +9,13 @@
         <div class="left-margin"></div>
         <div class="main-text">
             <div style="color: black;">
-                <span class="home-text1">As a Software Engineer Intern at SmartOwn, 
-                    I gained exposure to the Agile Software Development Lifecycle and contributing 
-                    extensively at design, development, testing and deployment stages. In addition to 
+                <span class="home-text1">As an Intern at SmartOwn, 
+                    I gained exposure to the Agile Software Development Lifecycle and contributed
+                    extensively at design, development, testing and deployment stages. <br>In addition to 
                     maintaining and improving the health of existing production code, I developed 3 new 
                     user-facing features that are responsive for all platforms and ensured the technical 
                     feasibility of UI/UX designs using Sass, Bootstrap and Angular. These features bind 
-                    data to specific views and synchronize data with server using HTTP Service calls. 
+                    data to specific views and synchronize data with server using HTTP Service calls. <br>
                     Along with building high-quality reusable code, I used Amazon Elastic Load Balancer to 
                     increase capacity and reliability of application. I also gained hands on experience in 
                     containerized application deployment in cloud using Docker technology.</span><br>
