--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,8 +12,9 @@
             <svg height="10" width="400">
                 <line x1="0" y1="0" x2="2000" y2="0" style="stroke:rgb(255,255,255);stroke-width:5" />
             </svg></div>
-            <div class="home-text2" style="padding-top: 3rem;">Former Software Engineer Intern @ SmartOwn</div>
-            <div class="home-text2">BSc Software Systems @ SFU</div>
+            <div class="home-text2" style="padding-top: 3rem;">Software Engineer @ SmartOwn</div>
+            <div class="home-text2">ex-Software Engineer @ Spare | Amazon | RentMoola</div>
+            <div class="home-text2">BSc Computer Science @ SFU</div>
         </div><!--
         <div class="app-link">
             <a style="margin-right: 3rem;" href="https://play.google.com/store/apps/details?id=com.smartown"><img class="img-res" src="assets/images/applestore.png"
