--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -12,34 +12,46 @@
     <div class="container">
         <div class="left-margin"></div>
         <div class="images">
-            <img class="lady1 fade" src="assets/images/boston-housing.png"
-              alt="smartownicon">
-        </div>
-        <div class="main-text">
-            <div style="color: black;">
-                <span class="home-text1">I was able to develop and evaluate performance and 
-                    predictive power of supervised regressor model using Python libraries 
-                    like NumPy, Panda, Scikit-Learn, Matplotlib to help real estate agents 
-                    to predict value for houses.</span><br>
+            <a href="https://github.com/manmeetskalra/gitlab-analyzer">
+            <div class="heading" style="font-size: 35px; text-transform:none; line-height: 0px;">GitLab Analyzer</div><p></a>
+            
+                    <li class="home-text1">
+                    <ul>Created a web application to analyze GitLab repositories for individual contribution which can
+                    be used as a tool for marking or KPI.</ul>
+
+                    <ul>Designed a back-end interface for accessing the
+                    Gitlab API to extract project repo data for
+                    analysis.</ul>
+                    <ul>Built UI components to calculate and represent
+                    metrics in tabular form, and created Code
+                    Difference page to compare commits made by
+                    team across merge requests and issues.</ul>
+                    <li><br>
             </div>
-        </div>
-        <div class="left-margin"></div>
+
     </div>
-    <div class="container">
-        <div class="left-margin"></div>
-        <div class="main-text">
-            <div style="color: black;">
-                <span class="home-text1">I was able to develop a mathematical game in 
-                    group 3, using Html, CSS and JavaScript to give game attractive and 
-                    user-friendly experience. I was also responsible for testing all 
-                    possible input combination and implement direct buttons to solve 
-                    complex states.</span><br>
-            </div>
+    <br>
+    <br>
+    <br>
+    <div class="images">
+        <a href="https://github.com/manmeetskalra/covidhub">
+        <div class="heading" style="font-size: 35px; text-transform:none; line-height: 0px;">CovidHub</div><p></a>
+        
+                <li class="home-text1">
+                <ul>Built an end-to-end application that gives user
+                    access to COVID related data and analytics via
+                    email/text.
+                    </ul>
+
+                <ul>Created UI components to select filters and
+                    request real-time Covid data. Developed REST
+                    APIs to process filter and fetch data from third
+                    party service.
+                    </ul>
+                <ul>Deployed the application using microservices
+                    architecture on AWS using ECS.</ul>
+                <li><br>
         </div>
-        <div class="images">
-            <img class="lady1 fade" style= "height: 500px;"src="assets/images/Puck-puzzle.png"
-              alt="smartownicon">
-        </div>
-        <div class="left-margin"></div>
-    </div>
+
+    
 </div>
