--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -9,8 +9,8 @@
         <div class="left-margin"></div>
         <div class="images">
             <a href="assets/images/resume.pdf" download>
-            <img class="lady1 fade" src="assets/images/resume.png"
-              alt="smartownicon"></a>
+            <img class="lady1 fade" src="assets/images/Manmeet_Singh_BE_Resume.jpg"
+              alt="resume"></a>
         </div>
         <div class="left-margin"></div>
     </div>
