--- a/src/app/work/work.component.html
+++ b/src/app/work/work.component.html
@@ -7,24 +7,22 @@
     </div>
     <div class="container">
         <div class="left-margin"></div>
-        <div class="main-text">
-            <div style="color: black;">
-                <span class="home-text1">As an Intern at SmartOwn, 
-                    I gained exposure to the Agile Software Development Lifecycle and contributed
-                    extensively at design, development, testing and deployment stages. <br>In addition to 
-                    maintaining and improving the health of existing production code, I developed 3 new 
-                    user-facing features that are responsive for all platforms and ensured the technical 
-                    feasibility of UI/UX designs using Sass, Bootstrap and Angular. These features bind 
-                    data to specific views and synchronize data with server using HTTP Service calls. <br>
-                    Along with building high-quality reusable code, I used Amazon Elastic Load Balancer to 
-                    increase capacity and reliability of application. I also gained hands on experience in 
-                    containerized application deployment in cloud using Docker technology.</span><br>
-            </div>
-        </div>
         <div class="images">
-            <img class="lady1 fade" src="assets/images/smartownicon.jpg"
+            <a href="https://www.linkedin.com/company/smartown-india/mycompany/" target="_blank">
+            <img class="lady1 fade" src="assets/images/smartown_logo.jpeg"
+              alt="smartown_logo">
+            </a><a href="https://www.linkedin.com/company/spare/" target="_blank">
+              <img class="lady1 fade" src="assets/images/spare_logo.jpeg"
               alt="smartownicon">
+            </a><a href="https://www.linkedin.com/company/amazon/" target="_blank">
+              <img class="lady1 fade" src="assets/images/amazon_logo.jpeg"
+              alt="smartownicon">
+            </a><a href="https://www.linkedin.com/company/rentmoola/" target="_blank">
+              <img class="lady1 fade" src="assets/images/rentmoola_logo.jpeg"
+              alt="smartownicon">
+            </a>
+
         </div>
-        <div class="left-margin"></div>
+        
     </div>
 </div>
