--- a/src/app/work/work.component.css
+++ b/src/app/work/work.component.css
@@ -10,20 +10,22 @@
 .container {
     height: 100%; 
     display: grid;
-    grid-template-columns:1fr 3fr 2fr 0.5fr;
-    padding-top: 10rem;
-    padding-bottom: 5vw;
+    grid-template-columns:1fr 7fr 1fr;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
 
 }
 .lady1 {
-    width: 70%;
+    width: 20%;
     position: relative;
     z-index: 0;
+    padding: 1rem;
 }
 .images {
     margin-top: 0rem;
     max-width: none;
     transition: none 0s ease 0s;
+    text-align: center;
 }
 img {
     border-radius: 50%;
